--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "CS493 class demos",
   "main": "hello.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,10 @@
   },
   "homepage": "https://github.com/wnsgur4322/CS493-Cloud-Application-Development#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "figlet": "^1.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
