--- a/offline-work/package.json
+++ b/offline-work/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "dev": "NODE_ENV=development nodemon server.js"
   },
   "repository": {
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/osu-cs493-sp21/offline-work#readme",
   "dependencies": {
+    "amqplib": "^0.8.0",
     "express": "^4.17.1",
     "image-size": "^1.0.0",
     "mongodb": "^3.6.7",
