--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/wnsgur4322/CS493-Cloud-Application-Development#readme",
   "dependencies": {
+    "apollo-server-express": "^2.24.1",
     "express": "^4.17.1",
     "figlet": "^1.5.0",
+    "graphql": "^15.5.0",
     "mysql2": "^2.2.5"
   },
   "devDependencies": {
